<resources>
    <string name="app_name">TransportesAgroberries</string>

    //Login
    <string name="login_user">Usuario</string>
    <string name="login_password">Contraseña</string>
    <string name="login_content_desc_logo">Logo de la empresa</string>
    <string name="login_content_desc_user">Logo usuario</string>
    <string name="login_content_desc_password">Logo contraseña</string>
    <string name="login_button">Ingresar</string>
    <string name="remind_user">Recordar usuario</string>

    //Nav Bar
    <string name="home_nav_bar">Home</string>
    <string name="sync_nav_bar">Sincronización</string>
    <string name="about_nav_bar">Acerca de...</string>
    <string name="logout_nav_bar">Salir</string>
    <string name="title_nav_bar">Agroberries México</string>
    <string name="subtitle_nav_bar">Transportes</string>

    //Main Graph
    <string name="graph_driver_data_fragment">Datos del chofer</string>
    <string name="graph_sync_fragment">Sincronización</string>
    <string name="graph_about_fragment">Acerca De...</string>
    <string name="scanner">Registro Automático</string>

    //Driver Data Fragment
    <string name="plate_driver_data_fragment">Placas del vehiculo:</string>
    <string name="route_driver_data_fragment">Ruta:</string>
    <string name="name_driver_data_fragment">Nombre del chofer</string>
    <string name="confirm_driver_data_fragment">Confirmar</string>
    <string name="instrucciones">Selecciona vehiculo y ruta para continuar.</string>

    //Sync Fragment
    <string name="download_data_sync_fragment">Descargar Catalogos</string>
    <string name="upload_data_sync_fragment">Enviar Registros</string>
    <string name="upload_data_pending">Pendientes de enviar </string>
    <string name="pie_pagina">Sincronización de información </string>

    //About Fragment
    <string name="developed_by_about_fragment">Desarrollado por el equipo de T.I. Agroberries México</string>
    <string name="doubts_about_fragment">¿Tienes dudas?</string>
    <string name="contact_us_about_fragment">Contactanos</string>
    <string name="mail1_about_fragment">aorozco@agroberries.mx</string>
    <string name="mail2_about_fragment">programador@agroberries.mx</string>
    <string name="version_about_fragment">Version: 2.0.0</string>
    <string name="privacy_policies_about_fragment">Políticas de privacidad</string>
    <string name="title_activity_login">LoginActivity</string>

    //Privacy Policy
    <string name="location_and_other_policy_activity">Sobre tu ubicación y otros permisos</string>
    <string name="like_describe_policy_activity">Como se describe en nuestra</string>
    <string name="privacy_policy_activity">Politica de Privacidad.</string>
    <string name="description_policy_activity">Si otorgas los permisos solicitados por nuestra aplicación (Agroberries Transportes AB), usaremos tu dispositivo para **recopilar datos de UBICACIÓN GPS PRECISA** para el funcionamiento esencial de la aplicación.

    **Esta recopilación incluye el uso de tu ubicación EN SEGUNDO PLANO (incluso cuando la aplicación está cerrada o no está en uso) con el ÚNICO propósito de:**

    1. **Rastrear y geocercar la ubicación exacta del escaneo de trabajadores** para validar el punto de servicio y garantizar la transparencia en el registro de asistencia.
    2. **Generar un registro de ruta** durante el servicio activo para fines de seguridad y control logístico.</string>
    <string name="description2_policy_activity">Tambien podemos usar y compartir esta información con socios confiables para brindarte nuestros servicios y mejorarlos.</string>
    <string name="description3_policy_activity">Independientemente de que permitas o no el acceso a tu ubicación, puedes continuar utilizando nuestra app (Agroberries México Transportes - APP) de manera limitada.
                                         Tenga en cuenta que denegar el acceso a la ubicación de su dispositivo cuando se le solicite no impide el acceso a la información de ubicación general incrustada en su dirección IP.
                                         Puedes cambiar los permisos otorgados en esta aplicación en cualquier momento.</string>
    <string name="rights_policy_activity">Todos los derechos reservados © Agroberries México 2024-2026</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- ESCANER -->
    <string name="control_transportes">Registro Automático</string>
    <string name="description">Posiciona el codigo QR/Barras del trabajador frente a la camára para escanear</string>
    <string name="scan_button">Activa Escaner</string>
    <string name="footer">Agroberries TI México</string>

    //Scanner Active Fragment
    <string name="escanear_credencial">Escanear Credencial</string>
    <string name="activarFlash">Activar Flash</string>
    <string name="counter">Numero de trabajadores: </string>
    <string name="escanea_codigo">Escanea el código QR / Barras</string>

</resources>