<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/navDriverData">

    <fragment
        android:id="@+id/navDriverData"
        android:name="com.AgroberriesMX.transportesagroberries.ui.driverdata.DriverDataFragment"
        android:label="@string/graph_driver_data_fragment"
        tools:layout="@layout/fragment_driver_data" />

    <fragment
        android:id="@+id/navSync"
        android:name="com.AgroberriesMX.transportesagroberries.ui.sync.SyncFragment"
        android:label="@string/graph_sync_fragment"
        tools:layout="@layout/fragment_sync" />
    <fragment
        android:id="@+id/navAbout"
        android:name="com.AgroberriesMX.transportesagroberries.ui.about.AboutFragment"
        android:label="@string/graph_about_fragment"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/scannerFragment"
        android:name="com.AgroberriesMX.transportesagroberries.ui.scanner.ScannerFragment"
        android:label="@string/scanner"
        tools:layout="@layout/fragment_scanner">

        <action
            android:id="@+id/action_scannerFragment_to_scannerActiveFragment"
            app:destination="@id/scannerActiveFragment" />
    </fragment>

    <!-- 3. Define el fragmento de destino (scannerActiveFragment) como un fragmento normal. -->
    <fragment
        android:id="@+id/scannerActiveFragment"
        android:name="com.AgroberriesMX.transportesagroberries.ui.scanner.active.ScannerActiveFragment"
        android:label="ScannerActiveFragment"
        tools:layout="@layout/fragment_scanner_active">

        <!-- AÑADE ESTO -->
        <argument
            android:name="scannedContent"
            app:argType="string" />

    </fragment>
</navigation>
