<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.scanner.ScannerFragment">

    <!-- Contenido Principal -->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/footer_layout"
        app:layout_constraintTop_toTopOf="parent">

        <!-- The ImageView should go here -->
        <ImageView
            android:id="@+id/qr_scan_icon"
            android:layout_width="230dp"
            android:layout_height="164dp"
            android:contentDescription="Icono de escaneo de código QR"
            android:src="@drawable/qrscan"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:gravity="center"
            android:text="@string/description"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnActivateScanner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/agroWorld"
            android:paddingStart="48dp"
            android:paddingTop="12dp"
            android:paddingEnd="48dp"
            android:paddingBottom="12dp"
            android:text="@string/scan_button"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:cornerRadius="24dp" />

    </LinearLayout>

    <!-- Pie de página -->
    <LinearLayout
        android:id="@+id/footer_layout"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/agroWorld"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <!-- Icono de usuario. Debes añadir 'ic_user' a tu carpeta drawable. -->
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/ic_user"
            app:tint="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/footer"
            android:textColor="@color/white"
            android:textSize="14sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>