<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.driverdata.DriverDataFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            app:cardCornerRadius="16dp"
            app:layout_constraintBottom_toTopOf="@id/btnConfirm"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_margin="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|center_horizontal"
                    android:orientation="horizontal"
                    android:layout_margin="16dp">

                    <ImageView
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:src="@drawable/ic_driver"/>
                </LinearLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:gravity="center_horizontal"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/instrucciones"
                    android:textStyle="bold">

                </TextView>

            <!--LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="horizontal"
                android:layout_margin="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/plate_driver_data_fragment"
                    android:textStyle="bold"/>

                <Spinner
                    android:id="@+id/spinner_placas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="13dp" />

            </LinearLayout-->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayoutPlacas"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/plate_driver_data_fragment"
                    android:layout_margin="16dp">

                    <AutoCompleteTextView
                        android:id="@+id/autoCompleteTextViewPlacas"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:importantForAccessibility="no"/>
                </com.google.android.material.textfield.TextInputLayout>

                <!--LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|center_horizontal"
                    android:orientation="horizontal"
                    android:layout_margin="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/route_driver_data_fragment"
                        android:textStyle="bold"/>

                    <Spinner
                        android:id="@+id/dataRutas"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="13dp"/>

                </LinearLayout-->

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayoutRutas"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/route_driver_data_fragment"
                    android:layout_margin="16dp">

                    <AutoCompleteTextView
                        android:id="@+id/autoCompleteTextViewRutas"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:importantForAccessibility="no"/>
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:gravity="center_vertical|center_horizontal"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout

                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name_driver_data_fragment">

                        <!--this is the actual edit text which takes the input-->
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etNameDriver"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btnConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/principal"
            android:text="@string/confirm_driver_data_fragment"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>